--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             border: none;
             outline: none;
         }
+        #resultado{
+            font-size: 2em;
+        }
     </style>
 </head>
 <body>
@@ -138,6 +141,34 @@
         {
             let imc = peso.value / (altua.value * altua.value);
             console.log(imc)
+            const result = document.getElementById('resultado')
+            if(imc < 18.5)
+            {
+                console.log('Magreza | Obesidade: 0')
+                result.innerHTML = 'Magreza | Obesidade: 0'
+            }
+            else if(imc > 18.5 && imc < 25)
+            {
+                console.log( 'Normal | Obesidade: 0')
+                result.innerHTML = 'Normal | Obesidade: 0'
+            }
+            else if(imc >= 25 && imc < 30)
+            {
+                console.log('Sobrepeso | Obesidade: I')
+                result.innerHTML = 'Sobrepeso | Obesidade: I'
+            }
+            else if(imc >= 30 && imc < 40)
+            {
+                console.log('Obesidade | Obesidade: II')
+                result.innerHTML = 'Obesidade | Obesidade: II'
+            }
+            else
+            {
+                console.log('Obesidade grave | Obesidade: III')
+                result.innerHTML = 'Obesidade grave | Obesidade: III'
+            }
+            go(2,3)
+
         }
     }
 </script>
