--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
             <h3>Calculadora de IMC</h3>
             <hr>
             <label for="peso">Digite o seu peso</label>
-            <input type="number" placeholder="seu peso" id="peso">
+            <input type="number" class="linpar" placeholder="seu peso" id="peso">
             <br><br>
             <label for="altura">Digite o seu altura</label>
-            <input type="number" placeholder="sua altua" id="altura">
+            <input type="number" class="linpar" placeholder="sua altua" id="altura">
             <br><br>
-            <button onclick="validate()">Calcular</button>
+            <button onclick="validate() ">Calcular</button>
         </div>
         <div class="final-step">
             <h3>Resultado</h3>
             <p id="resultado">...</p>
-            <button>Calcular Novamente</button>
-            <button>Finalizar</button>
+            <button onclick="go(3,2)">Calcular Novamente</button>
+            <button onclick="go(3,1)">Finalizar</button>
         </div>
     </div>
 </body>
@@ -86,7 +86,7 @@
         {
             dNone = firstDiv;  
         }
-        else if(currentStep == 1)
+        else if(currentStep == 2)
         {
             dNone = seconeDiv;
         }
@@ -140,35 +140,40 @@
         else
         {
             let imc = peso.value / (altua.value * altua.value);
-            console.log(imc)
-            const result = document.getElementById('resultado')
+            const result = document.getElementById('resultado');
+
             if(imc < 18.5)
             {
                 console.log('Magreza | Obesidade: 0')
-                result.innerHTML = 'Magreza | Obesidade: 0'
+                result.style.color = 'yellow';
+                result.innerHTML = 'Magreza | Obesidade: 0';
             }
             else if(imc > 18.5 && imc < 25)
             {
-                console.log( 'Normal | Obesidade: 0')
-                result.innerHTML = 'Normal | Obesidade: 0'
+                console.log( 'Normal | Obesidade: 0');
+                result.style.color = 'green';
+                result.innerHTML = 'Normal | Obesidade: 0';
             }
             else if(imc >= 25 && imc < 30)
             {
-                console.log('Sobrepeso | Obesidade: I')
-                result.innerHTML = 'Sobrepeso | Obesidade: I'
+                console.log('Sobrepeso | Obesidade: I');
+                result.style.color = 'yellow';
+                result.innerHTML = 'Sobrepeso | Obesidade: I';
             }
             else if(imc >= 30 && imc < 40)
             {
-                console.log('Obesidade | Obesidade: II')
-                result.innerHTML = 'Obesidade | Obesidade: II'
+                console.log('Obesidade | Obesidade: II');
+                result.style.color = 'red';
+                result.innerHTML = 'Obesidade | Obesidade: II';
             }
             else
             {
-                console.log('Obesidade grave | Obesidade: III')
-                result.innerHTML = 'Obesidade grave | Obesidade: III'
+                console.log('Obesidade grave | Obesidade: III');
+                result.style.color = 'black';
+                result.innerHTML = 'Obesidade grave | Obesidade: III';
             }
             go(2,3)
-
+            
         }
     }
 </script>
