--- a/index.html
+++ b/index.html
@@ -5,48 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calcudora IMC</title>
-    <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            background-image: linear-gradient(to right, rgba(29, 136, 207, 0.527), rgba(110, 25, 143, 0.774));
-            text-align: center;
-            color: whitesmoke;
-        }
-        .conteiner{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 50%;
-            background-color: rgba(0, 0, 0, .5);
-            padding: 1em;
-            border-radius: 14px;
-        }
-        button{
-            background-color: slateblue;
-            color: whitesmoke;
-            border: none;
-            padding: 1em;
-            border-radius: 10px;
-            box-shadow: 1px 5px 10px rgba(0, 0, 0, .4);
-        }
-        button:hover{
-            background-color: blue;
-            cursor: pointer;
-        }
-        .final-step, .secone-step{
-            display: none;
-        }
-        input{
-            padding: 5px;
-            border-radius: 5px;
-            border: none;
-            outline: none;
-        }
-        #resultado{
-            font-size: 2em;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>MICHEL FERNANDO AZARATE</h1>
